--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "forceConsistentCasingInFileNames": true,
+    "target": "es5",
     "incremental": true,
     "plugins": [
       {
