--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.5",
-    "axios": "^0.21.1",
-    "marked": "^4.0.12",
-    "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^10.1.0"
+    "axios": "^1.6.2",
+    "marked": "^9.1.5",
+    "@vercel/og": "^0.6.2"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -26,8 +25,7 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "@types/puppeteer": "^5.4.4",
-    "@types/marked": "^4.0.12",
+    "@types/marked": "^5.0.2",
     "autoprefixer": "^10.4.14"
   }
 }
