--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.5",
     "axios": "^1.6.2",
     "marked": "^9.1.5",
+    "form-data": "^4.0.0",
     "@vercel/og": "^0.6.2"
   },
   "devDependencies": {
